--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=7000
-MONGODB_URL = "mongodb://0.0.0.0:27017/crudTest"
+MONGODB_URL ="mongodb+srv://adityasinha198:Mz01GhXgpwxPrjAN@crud.46omvbp.mongodb.net/?retryWrites=true&w=majority&appName=CRUD"
 JWT_KEY="jwtkey"
